--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout user code
         uses: actions/checkout@v3
+        if : always()
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
